# GravitySim

./: .clang-format  CMakeLists.txt  LICENSE  run.sh
src/: collideable.h  drawable.h  engine.cpp  engine.h  globals.h  main.cpp  moveable.h  object.cpp  object.h  objectmanager.cpp  objectmanager.h  planet.h  test.cpp  test.h  window.cpp  window.h
